--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Vaihav Jain Profile </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Vaibhav's Personal Page" />
-	<meta name="keywords" content="vaibhav, vaibhav jain, Devops, dubai devops, kubernetes"/>
+	<meta name="keywords" content="vaibhav, vaibhav jain, manu, devops, dubai devops, kubernetes, aws"/>
 	<meta name="author" content="vaibhav" />
 
 
@@ -59,7 +59,7 @@
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/vaibhav.jpg);"></div>
 							<h1><span>Vaibhav Jain</span></h1>
-							<h3><span>Devops / Blogger / Trainer / Son / Faith / Karma </span></h3>
+							<h3><span>Devops / Blogger / Trainer / Son / Faith & Karma </span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://twitter.com/devopsturtle"><i class="icon-twitter2"></i></a></li>
@@ -93,8 +93,8 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Folks!</h2>
-					<p>I am a Devops enthusiast.</p>
-					<p> Apart from ardor for technology, I love to travel, reconnoitering new cultures and cuisines of different places. I worked as a Principal Devops Engineer where my role revolved around understanding the client’s requirements and efficiently incorporating them in the technical specifications to develop a practical and effective solution. </p>
+					<p>I am a Devops enthusiast and cloud automation engineer.</p>
+					<p> Apart from ardor for technology, I love blogging, travelling, cooking and reconnoitering new cultures and cuisines of different places. I worked as a Principal Devops Engineer where my role revolved around understanding the client’s requirements and efficiently incorporating them in the technical specifications to develop a practical and effective solution. </p>
 				</div>
 			</div>
 		</div>
@@ -121,7 +121,7 @@
 									<span class="company"><a href="https://www.tajawal.com/">Tajawal & Almosafer</a> : November 2018 - Current</span>
 								</div>
 								<div class="timeline-body">
-									<p> Tajawal and Almosafer is the Consumer Travel subsedries for one of the largest travel and tourism companies in Saudi Arabia with a prominent local, regional and international presence.</p>
+									<p> Tajawal and Almosafer is the Consumer Travel subsedries in Dubai for one of the largest travel and tourism companies in Saudi Arabia with a prominent local, regional and international presence.</p>
 								</div>
 							</div>
 						</li>
