--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<div class="col-md-4">
 					<ul class="info">
 						<li><span class="first-block">Full Name:</span><span class="second-block">Vaibhav Jain</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">vaibhavjain@gmail.com</span></li>
+						<li><span class="first-block">Email:</span><span class="second-block">vaibhavjain882@gmail.com</span></li>
 						<li><span class="first-block">Website:</span><span class="second-block">www.vaibhavjain.me</span></li>
 						<li><span class="first-block">Location:</span><span class="second-block">Dubai/India</span></li>
 					</ul>
@@ -94,7 +94,7 @@
 				<div class="col-md-8">
 					<h2>Folks!</h2>
 					<p>I am a Devops enthusiast and cloud automation engineer.</p>
-					<p> Apart from ardor for technology, I love blogging, travelling, cooking and reconnoitering new cultures and cuisines of different places. I worked as a Principal Devops Engineer where my role revolved around understanding the client’s requirements and efficiently incorporating them in the technical specifications to develop a practical and effective solution. </p>
+					<p> Apart from technology, I love blogging, travelling, cooking and reconnoitering new cultures and cuisines of different places. I worked as a Principal Devops Engineer where my role revolved around understanding the client’s requirements and efficiently incorporating them in the technical specifications to develop a practical and effective solution. </p>
 				</div>
 			</div>
 		</div>
@@ -118,10 +118,10 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Principal Devops Engineer</h3>
-									<span class="company"><a href="https://www.tajawal.com/">Tajawal & Almosafer</a> : November 2018 - Current</span>
+									<span class="company"><a href="https://www.tajawal.com/">Tajawal</a> & <a href="https://www.almosafer.com/">Almosafer</a> : November 2018 - Current</span>
 								</div>
 								<div class="timeline-body">
-									<p> Tajawal and Almosafer is the Consumer Travel subsedries in Dubai for one of the largest travel and tourism companies in Saudi Arabia with a prominent local, regional and international presence.</p>
+									<p> Tajawal and Almosafer is the consumer travel subsidiaries in Dubai for one of the largest travel & tourism <a href="https://seera.sa/">seera group</a> in Saudi Arabia with a prominent local, regional and international presence.</p>
 								</div>
 							</div>
 						</li>
@@ -133,8 +133,8 @@
 									<span class="company"><a href="http://www.paytm.com">Paytm</a> : August 2017 - October 2018</span>
 								</div>
 								<div class="timeline-body">
-									<p>Paytm is India's largest Digital wallet company and one of the bigger ecommerse and consumer needs company</p>
-									<p>I was part of Devops team involved in designing and implementing the kubernetes orchestartion at scale on AWS/ CI & CD without downtimes.</p>
+									<p>Paytm is India's largest Digital wallet company and one of the bigger E-commerce and consumer needs company.</p>
+									<p>I was part of Devops team involved in designing and implementation of kubernetes orchestartion at scale on AWS and CI/CD without downtime.</p>
 								</div>
 							</div>
 						</li>
@@ -147,7 +147,7 @@
 								</div>
 								<div class="timeline-body">
 									<p>HCL Technologies is the Indian biggest MNC(IT) deals in 44 countries across the globe.</p>
-									<p>I was worked for a US based Insurance conpany for revamping there infra from datacenter to cloud</p>
+									<p>I worked for an US based Insurance company in revamping there IT infrastructure from datacenter to cloud.</p>
 								</div>
 							</div>
 						</li>
@@ -158,11 +158,11 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Software Engineer and Full Stack Developer</h3>
-									<span class="company"><a href="http://cybage.com">Cybage Technologies</a> :  September 2014 - September 2016</span>
+									<span class="company"><a href="http://www.cybage.com">Cybage</a> :  September 2014 - September 2016</span>
 								</div>
 								<div class="timeline-body">
-									<p>Cybage is Tech company specilised in software development and automation</p>
-									<p>I worked in implementation/automation of data analytics platform for social media for a US based client.</p>
+									<p>Cybage is Tech company specilised in software development and automation.</p>
+									<p>I worked on implementation/automation of data analytics platform for social media platform for an US based client.</p>
 								</div>
 							</div>
 						</li>
@@ -228,24 +228,40 @@
 					<div class="chart" data-percent="93"><span><strong>Linux</strong>93%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>Ansible</strong>90%</span></div>
+					<div class="chart" data-percent="90"><span><strong>Docker</strong>90%</span></div>
 				</div>
 
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="89"><span><strong>Docker</strong>89%</span></div>
+					<div class="chart" data-percent="90"><span><strong>Kubernetes</strong>90%</span></div>
 				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="85"><span><strong>SaltStack</strong>85%</span></div>
+				</div>
+
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="90"><span><strong>Terraform</strong>90%</span></div>
+				</div>
+
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="95"><span><strong>CI / CD</strong>95%</span></div>
+				</div>
+
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="95"><span><strong>Automation</strong>95%</span></div>
+				</div>
+
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="85"><span><strong>Logging</strong>85%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>Monitoring</strong>90%</span></div>
+					<div class="chart" data-percent="75"><span><strong>Monitoring</strong>75%</span></div>
 				</div>
+
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>Automation</strong>95%</span></div>
+					<div class="chart" data-percent="35"><span><strong>Service Mesh</strong>35%</span></div>
 				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>CI / CD</strong>90%</span></div>
-				</div>
+				
+				
 			</div>
 			<div class="row">
 			</div>
