--- a/index.html
+++ b/index.html
@@ -213,6 +213,49 @@
 		</div>
 	</div>
 
+
+	<div id="fh5co-features" class="animate-box">
+		<div class="container">
+			<div class="services-padding">
+
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+						<h2>Technical Certifications</h2>
+					</div>
+				</div>
+				<div class="row" >
+
+					<div class="col-md-4 text-center">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="fab fa-docker"></i>
+							</span>
+							<div class="feature-copy">
+								<h3>Containers</h3>
+								<p>* Certified Kubernetes Administrator</p>
+								<p>* Certified Kubernetes Application Developer</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-4 text-center">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="icon-cloud"></i>
+							</span>
+							<div class="feature-copy">
+								<h3>Cloud</h3>
+								<p>* AWS Certified Solutions Architect - Associate</p>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
+
+
 	<div id="fh5co-skills" class="animate-box">
 		<div class="container">
 			<div class="row">
