--- a/index.html
+++ b/index.html
@@ -249,6 +249,19 @@
 							</div>
 						</div>
 					</div>
+					
+					<div class="col-md-4 text-center">
+						<div class="feature-left">
+							<span class="icon">
+								<i class="fab fa-linux"></i>
+							</span>
+							<div class="feature-copy">
+								<h3>Others</h3>
+								<p>* HashiCorp Certified: Terraform Associate</p>
+								<p></p>
+							</div>
+						</div>
+					</div>
 
 				</div>
 			</div>
