--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
 								<h3>Containers</h3>
 								<p>* Certified Kubernetes Administrator</p>
 								<p>* Certified Kubernetes Application Developer</p>
+								<p>* Certified Kubernetes Security Specialist</p>
 							</div>
 						</div>
 					</div>
