--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				<div class="col-md-8">
 					<h2>Folks!</h2>
 					<p>I am a Devops enthusiast and cloud automation engineer.</p>
-					<p> Apart from technology, I love blogging, travelling, cooking and reconnoitering new cultures and cuisines of different places. I worked as a Principal Devops Engineer where my role revolved around understanding the client’s requirements and efficiently incorporating them in the technical specifications to develop a practical and effective solution. </p>
+					<p> Apart from technology, I love blogging, traveling, cooking, and reconnoitering new cultures and cuisines of different places. I am working as a DevOps Evangaliust where my role revolved around understanding the client’s requirements and efficiently incorporating them in the technical specifications to develop a practical and effective solution. </p>
 				</div>
 			</div>
 		</div>
@@ -122,7 +122,7 @@
 									<span class="company"><a href="https://www.tajawal.com/">Tajawal</a> & <a href="https://www.almosafer.com/">Almosafer</a> : November 2018 - Current</span>
 								</div>
 								<div class="timeline-body">
-									<p> Tajawal and Almosafer is the consumer travel subsidiaries in Dubai for one of the largest travel & tourism <a href="https://seera.sa/">seera group</a> in Saudi Arabia with a prominent local, regional and international presence.</p>
+									<p> Tajawal and Almosafer are the consumer travel subsidiaries in Dubai for one of the largest travel & tourism <a href="https://seera.sa/">seera group</a> in Saudi Arabia with a prominent local, regional and international presence.</p>
 								</div>
 							</div>
 						</li>
@@ -134,8 +134,8 @@
 									<span class="company"><a href="http://www.paytm.com">Paytm</a> : August 2017 - October 2018</span>
 								</div>
 								<div class="timeline-body">
-									<p>Paytm is India's largest Digital wallet company and one of the bigger E-commerce and consumer needs company.</p>
-									<p>I was part of Devops team involved in designing and implementation of kubernetes orchestartion at scale on AWS and CI/CD without downtime.</p>
+									<p>Paytm is India's largest digital wallet company and one of the bigger E-commerce and consumer needs platform.</p>
+									<p>I was part of the Devops team involved in designing and implementing Kubernetes orchestration at scale on AWS and CI/CD without downtime.</p>
 								</div>
 							</div>
 						</li>
@@ -147,8 +147,8 @@
 									<span class="company"><a href="http://www.hcltech.com">HCL Technologies</a> :  September 2016 - August 2017</span>
 								</div>
 								<div class="timeline-body">
-									<p>HCL Technologies is the Indian biggest MNC(IT) deals in 44 countries across the globe.</p>
-									<p>I worked for an US based Insurance company in revamping there IT infrastructure from datacenter to cloud.</p>
+									<p>HCL Technologies is the Indian biggest MNC(IT) deal in 44 countries across the globe.</p>
+									<p>I worked for a US-based Insurance company in revamping their IT infrastructure from the data center to the cloud.</p>
 								</div>
 							</div>
 						</li>
@@ -162,8 +162,8 @@
 									<span class="company"><a href="http://www.cybage.com">Cybage</a> :  September 2014 - September 2016</span>
 								</div>
 								<div class="timeline-body">
-									<p>Cybage is Tech company specilised in software development and automation.</p>
-									<p>I worked on implementation/automation of data analytics platform for social media platform for an US based client.</p>
+									<p>Cybage is a Tech company specialized in software development and automation.</p>
+									<p>I worked on the implementation/automation of a data analytics platform for social media platform for a US-based client.</p>
 								</div>
 							</div>
 						</li>
